--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,8 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    overflow-y: scroll;
+    overflow: hidden;
+    background-attachment: fixed;
 }
 
 #SignupBody {
@@ -13,7 +14,6 @@
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100% 100%;
-    overflow-y: scroll;
 }
 
 #ContactBody {
@@ -23,7 +23,6 @@
     background-color: black;
     background-attachment: fixed;
     background-size: 100% 100%;
-    overflow-y: scroll;
 }
 
 h1 {
